--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 		<parent>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-starter-parent</artifactId>
-				<version>1.5.1.RELEASE</version>
+				<version>1.5.3.RELEASE</version>
 		</parent>
 
 		<dependencies>
@@ -39,9 +39,10 @@
 						<artifactId>postgresql</artifactId>
 				</dependency>
 				<dependency>
-						<groupId>org.liquibase</groupId>
-						<artifactId>liquibase-core</artifactId>
+						<groupId>org.hibernate</groupId>
+						<artifactId>hibernate-envers</artifactId>
 				</dependency>
+
 		</dependencies>
 
 		<properties>
