--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 # Database Config
 # Un-comment these lines to connect to a database. When commented out, you automatically get an in-memory-database.
-#spring.jpa.hibernate.ddl-auto=update
-
+spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=${JDBC_DATABASE_URL}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.maxActive=10
