--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 # Database Config
 # Un-comment these lines to connect to a database. When commented out, you automatically get an in-memory-database.
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
 spring.datasource.url=${JDBC_DATABASE_URL}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.maxActive=10
