--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,14 @@
 						<groupId>org.hibernate</groupId>
 						<artifactId>hibernate-envers</artifactId>
 				</dependency>
+				<dependency>
+						<groupId>org.springframework.boot</groupId>
+						<artifactId>spring-boot-starter-actuator</artifactId>
+				</dependency>
+				<dependency>
+ 						<groupId>org.hsqldb</groupId>
+ 						<artifactId>hsqldb</artifactId>
+ 				</dependency>
 
 		</dependencies>
 
