--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,10 @@
 		</developer>
 	</developers>
 
+    <prerequisites>
+        <maven>3.0.0</maven>
+    </prerequisites>
+
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
