--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,6 @@
-# Database Config
-# Un-comment these lines to connect to a database. When commented out, you automatically get an in-memory-database.
-#spring.jpa.hibernate.ddl-auto=create-drop
-#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.generate-ddl=true
-spring.jpa.show-sql=true
-#spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.profiles.active=dev
 
-spring.datasource.url=${JDBC_DATABASE_URL}
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.maxActive=10
-spring.datasource.maxIdle=5
-spring.datasource.minIdle=2
-spring.datasource.initialSize=5
-spring.datasource.removeAbandoned=true
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.properties.org.hibernate.envers.default_schema=_AUDIT
+
+url.service.viacep=https://viacep.com.br/ws/%s/json/
