--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,10 @@
 language: java
+jdk:
+  - oraclejdk8
+os:
+  - linux
 sudo: false
-script: mvn clean verify
+script:
+  - ./mvnw clean
+  - ./mvnw test
+  - ./mvnw package -Pprod -DskipTests
