--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,3 @@
 language: java
-jdk:
-  - oraclejdk8
-os:
-  - linux
 sudo: false
-script:
-  - ./mvnw clean
-  - ./mvnw test
-  - ./mvnw package -Pprod -DskipTests
+script: mvn clean verify
