--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
 language: java
 sudo: false
-script: mvn clean verify
+script: mvn clean verify cobertura:cobertura
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
