ajuste no arquivo travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,12 @@
 language: java
-sudo: false
-
 jdk:
   - oraclejdk8
+os:
+  - linux
+services:
+  - docker
+sudo: false
 script:
   - ./mvnw clean
   - ./mvnw test
   - ./mvnw package -Pprod -DskipTests
-after_success:
-  - mvn jacoco:report coveralls:report
