--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,5 @@ jdk:
   - oraclejdk8
 os:
   - linux
-services:
-  - docker
 sudo: false
-script:
-  - ./mvnw clean
-  - ./mvnw test
-  - ./mvnw package -Pprod -DskipTests
+script: mvn clean verify
