--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,6 @@ jdk:
 os:
   - linux
 sudo: false
-script: mvn clean verify
+script: mvn clean verify cobertura:cobertura
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
