Configurações para deploy no heroku

--- a/pom.xml
+++ b/pom.xml
@@ -158,6 +158,28 @@
 					<check />
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<goals>
+							<goal>repackage</goal>
+						</goals>
+						<configuration>
+							<finalName>${artifactId}</finalName>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<configuration>
+					<finalName>${artifactId}</finalName>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
@@ -175,4 +197,8 @@
 		</pluginRepository>
 	</pluginRepositories>
 
+	<organization>
+		<name>rogrs</name>
+		<url>https://github.com/rogrs</url>
+	</organization>
 </project>
