ajuste na configuração para criação do log

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -8,4 +8,4 @@ spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 
-logging.file=/home/rogerio/logs/app-heroku.log
+logging.file=./app-heroku.log
